# mayo

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: mayo.yml
benches/: bench.rs
src/: bitsliced.rs  codec.rs  echelon.rs  error.rs  gf16.rs  keygen.rs  keypair.rs  lib.rs  matrix_ops.rs  mayo_signature.rs  params.rs  pkcs8.rs  sample.rs  sign.rs  signing_key.rs  verify.rs  verifying_key.rs
tests/: kat.rs  pkcs8.rs  roundtrip.rs  sizes.rs
