[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["algorithms", "cryptography"]
description = "MAYO post-quantum signature scheme"
documentation = "https://github.com/mikelodder7/pq-mayo"
edition = "2024"
keywords = ["cryptography", "post-quantum", "signatures"]
license = "Apache-2.0 OR MIT"
name = "pq-mayo"
repository = "https://github.com/mikelodder7/pq-mayo"
version = "0.1.0"

[features]
default = []
js = ["getrandom/wasm_js"]
serde = ["dep:serde", "dep:serdect"]

[dependencies]
aes = "0.8"
ctr = "0.9"
getrandom = { version = "0.4", optional = true }
hex = "0.4"
rand = "0.10"
serde = { version = "1", features = ["derive"], optional = true }
serdect = { version = "0.4", optional = true }
signature = { version = "2", features = ["std"] }
subtle = "2.6"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
sha3 = { version = "0.10", features = ["asm"] }

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
sha3 = { version = "0.10" }

[dev-dependencies]
aes = "0.8"
criterion = { version = "0.8", features = ["html_reports"] }
postcard = { version = "1", features = ["use-std"] }
rstest = "0.24"
serde_json = "1"

[lints.rust]
missing_docs = "deny"
missing_debug_implementations = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unstable_features = "deny"
unused_import_braces = "deny"
unused_parens = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
unused_extern_crates = "deny"

[lints.clippy]
unwrap_used = "deny"
cast_precision_loss = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
mod_module_files = "warn"
panic = "warn"
panic_in_result_fn = "warn"

[[bench]]
name = "bench"
harness = false
