[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["algorithms", "cryptography"]
description = "MAYO post-quantum signature scheme"
documentation = "https://docs.rs/crate/pq-mayo"
edition = "2024"
keywords = ["cryptography", "post-quantum", "signatures"]
license = "Apache-2.0 OR MIT"
name = "pq-mayo"
exclude = ["tests/KAT"]
repository = "https://github.com/mikelodder7/mayo"
version = "0.4.0"

[features]
default = []
js = ["getrandom/wasm_js"]
pkcs8 = ["dep:pkcs8"]
serde = ["dep:serde", "dep:serdect"]

[dependencies]
aes = "0.9"
ctr = "0.10"
getrandom = { version = "0.4", optional = true }
hex = "0.4"
hybrid-array = { version = "0.4", features = ["zeroize"] }
rand = "0.10"
serde = { version = "1", features = ["derive"], optional = true }
serdect = { version = "0.4", optional = true }
pkcs8 = { version = "0.11", default-features = false, features = ["alloc"], optional = true }
shake = { version = "0.1" }
signature = { version = "3", features = ["alloc"] }
subtle = "2"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }


[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
ciborium = "0.2"
noyalib = "0.0.8"
postcard = { version = "1", features = ["use-std"] }
serde_json = "1"
toml = "1.1"

[lints.rust]
missing_docs = "deny"
missing_debug_implementations = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unstable_features = "deny"
unused_import_braces = "deny"
unused_parens = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
unused_extern_crates = "deny"

[lints.clippy]
unwrap_used = "deny"
cast_precision_loss = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
mod_module_files = "warn"
panic = "warn"
panic_in_result_fn = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "bench"
harness = false
